# python-sdk

./: .env.example  .env.prod.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: check.yml  release.yml
example/: .env.example  run_query.py
scripts/: inject_release_defaults.py
src/duckgresql/: __init__.py  _config.py  _flight.py  _rest.py  _rest_async.py  _types.py  _version.py  async_connection.py  async_job.py  connection.py  exceptions.py  result.py
tests/: conftest.py  test_async_connection.py  test_async_job.py  test_config.py  test_connection.py  test_flight.py  test_rest.py  test_result.py
